# meeting-copilot-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/models/: meeting.py
app/routers/: action_items.py  meeting.py  ws.py
app/services/: suggestions.py  transcription.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: MeetingControls.jsx  SuggestionPanel.jsx  TranscriptPanel.jsx
frontend/src/hooks/: useMeeting.js
